infrastructure/traefik/base/ns-traefik.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
spec: {}
status: {}
